--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -19,7 +19,7 @@ hugoblox:
     # Schema.org type for structured data
     type: person # person | organization | local_business
     # Short tagline displayed on your site
-    tagline: ""
+    tagline: "Staff Scientist | VPixx Technologies Inc."
     # Site meta description for search engines and social sharing
     description: "Sophie Kenny, Staff Scientist at VPixx Technologies"
     # Social accounts (used for meta tags like Twitter Cards)
@@ -116,7 +116,7 @@ hugoblox:
   # ────────────────────────────────────────────────────────────────────────────
   copyright:
     # Copyright notice - supports {year}, {name}, {license} placeholders
-    notice: "© {year} {name}."
+    notice: "© {year} {name}. This work is licensed under {license}"
     license:
       type: cc # cc | all_rights | custom
       allow_derivatives: false
@@ -286,7 +286,7 @@ hugoblox:
     # Requires: Pro subscription to support HugoBlox via alternative means
     # Note: Even with Pro, you can keep this false to support open source!
     # Get Pro: https://hugoblox.com/pro
-    hide_attribution: True
+    hide_attribution: false
 
     # Affiliate referral code for rewards program
     # Join affiliate program: https://hugoblox.com/affiliates
