--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -1,27 +1,30 @@
 # Navigation Links
 #   To link a homepage widget, specify the URL as a hash `#` followed by the filename of the
-  #     desired widget in your `content/home/` folder.
-  #   The weight parameter defines the order that the links will appear in.
+#     desired widget in your `content/home/` folder.
+#   The weight parameter defines the order that the links will appear in.
 
 main:
   - name: Bio
+    identifier: 5Tylir6q
     url: /
     weight: 10
   - name: Papers
+    identifier: 4nxWYqN1
     url: /#papers
-    weight: 11
-  - name: Talks
-    url: /#talks
-    weight: 12
-  - name: News
-    url: /#news
-    weight: 13
-  - name: Experience
-    url: experience/
     weight: 20
-  - name: Projects
-    url: projects/
+  - name: Talks
+    identifier: gq4MwaBI
+    url: /#talks
     weight: 30
-  - name: Courses
-    url: courses/
+  - name: News
+    identifier: IZAyGLUA
+    url: /#news
     weight: 40
+  - name: Experience
+    identifier: xHSMHFba
+    url: experience/
+    weight: 50
+  - name: Projects
+    identifier: HZ2xU80O
+    url: projects/
+    weight: 60
